[package]
name = "bully_luna_v4"
version = "1.1.0"
edition = "2021"
authors = ["Xanthus58 <xanthus58@protonmail.com>"]
license = "MIT"
repository = "https://github.com/Xanthus58/bully_luna_v4"
readme = "README.md"
description = "A small little app for me to bully my friend luna!"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.20.1", features = ["full"] }
dotenv = "0.15.0"