[package]
name = "bully_luna_v4"
version = "0.1.0"
authors = ["Xanthus58 <xanthus58@protonmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
eframe = { version = "0.19.0", features = ["persistence"] }
dotenv = "0.15.0"
egui-notify = "0.3.0"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
tracing = "0.1.36"
ehttp = "0.2.0"
poll-promise = "0.1.0"
serde_json = "1.0.85"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
